--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "cordova-plugin-screen-orientation": "^3.0.4",
-    "cordova-res": "0.15.4",
+    "cordova-res": "^0.15.4",
     "cypress": "latest",
     "eslint": "^9.20.0",
     "jasmine-core": "~3.8.0",
